// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditSignalDialog > renders correctly when slice has changeover 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    id="signal-dialog-toolbar"
    title="Production signal 12:16:00"
    titleicon=""
  />
  <v-form-stub
    disabled="false"
    fastfail="false"
    modelvalue="true"
    validateon="input"
  >
    <v-card-text-stub
      class="pa-4 pb-0"
      tag="div"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-stub
            class="mb-2"
            density="default"
            disabled="true"
            filled="true"
            grow="false"
            hint="Product"
            id="signal-product-input"
            modelvalue="test product 1 (sku 1)"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-with-selector-stub
            class="mb-2"
            disabled="false"
            hint="Enter quantity"
            id="signal-qty-input"
            items="[object Object]"
            modelvalue="3"
            placeholder="Enter quantity"
            rules="true"
            selecteditem="kg"
            type="number"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="false"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-combobox-stub
            appendicon=""
            class="mb-2"
            density="default"
            hint="Extra note (optional)"
            id="signal-notes-input"
            items=""
            maxlength="500"
            modelvalue="note 123"
            positiontop="false"
            rules="true"
          />
        </v-col-stub>
      </v-row-stub>
    </v-card-text-stub>
  </v-form-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    tag="div"
  >
    <!--v-if-->
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`EditSignalDialog > view elements > renders correctly when shiftviewStationRoleAllows allows deleting signals 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    id="signal-dialog-toolbar"
    title="Production signal 12:16:00"
    titleicon=""
  />
  <v-form-stub
    disabled="false"
    fastfail="false"
    modelvalue="true"
    validateon="input"
  >
    <v-card-text-stub
      class="pa-4 pb-0"
      tag="div"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-stub
            class="mb-2"
            density="default"
            disabled="true"
            filled="true"
            grow="false"
            hint="Product"
            id="signal-product-input"
            modelvalue="test product 1 (sku 1)"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-with-selector-stub
            class="mb-2"
            disabled="false"
            hint="Enter quantity"
            id="signal-qty-input"
            items="[object Object]"
            modelvalue="0"
            placeholder="Enter quantity"
            rules="Quantity cannot be 0"
            selecteditem=""
            type="number"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="false"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-combobox-stub
            appendicon=""
            class="mb-2"
            density="default"
            hint="Extra note (optional)"
            id="signal-notes-input"
            items=""
            maxlength="500"
            modelvalue=""
            positiontop="false"
            rules="true"
          />
        </v-col-stub>
      </v-row-stub>
    </v-card-text-stub>
  </v-form-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    tag="div"
  >
    <delete-button-stub
      disabled="false"
      id="delete-button"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`EditSignalDialog > view elements > renders correctly when shiftviewStationRoleAllows forbids deleting signals, but delete is allowed for station 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    id="signal-dialog-toolbar"
    title="Production signal 12:16:00"
    titleicon=""
  />
  <v-form-stub
    disabled="false"
    fastfail="false"
    modelvalue="true"
    validateon="input"
  >
    <v-card-text-stub
      class="pa-4 pb-0"
      tag="div"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-stub
            class="mb-2"
            density="default"
            disabled="true"
            filled="true"
            grow="false"
            hint="Product"
            id="signal-product-input"
            modelvalue="test product 1 (sku 1)"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-with-selector-stub
            class="mb-2"
            disabled="true"
            hint="Enter quantity"
            id="signal-qty-input"
            items="[object Object]"
            modelvalue="0"
            placeholder="Enter quantity"
            rules="Quantity cannot be 0"
            selecteditem=""
            type="number"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="false"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-combobox-stub
            appendicon=""
            class="mb-2"
            density="default"
            hint="Extra note (optional)"
            id="signal-notes-input"
            items=""
            maxlength="500"
            modelvalue=""
            positiontop="false"
            rules="true"
          />
        </v-col-stub>
      </v-row-stub>
    </v-card-text-stub>
  </v-form-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    tag="div"
  >
    <delete-button-stub
      disabled="false"
      id="delete-button"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`EditSignalDialog > view elements > snapshots > renders correctly if station doesn not have timeModeActive 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    id="signal-dialog-toolbar"
    title="Production signal 12:16:00"
    titleicon=""
  />
  <v-form-stub
    disabled="false"
    fastfail="false"
    modelvalue="true"
    validateon="input"
  >
    <v-card-text-stub
      class="pa-4 pb-0"
      tag="div"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-stub
            class="mb-2"
            density="default"
            disabled="true"
            filled="true"
            grow="false"
            hint="Product"
            id="signal-product-input"
            modelvalue="test product 1 (sku 1)"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-with-selector-stub
            class="mb-2"
            disabled="true"
            hint="Enter quantity"
            id="signal-qty-input"
            items="[object Object]"
            modelvalue="0"
            placeholder="Enter quantity"
            rules="Quantity cannot be 0"
            selecteditem=""
            type="number"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="false"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-combobox-stub
            appendicon=""
            class="mb-2"
            density="default"
            hint="Extra note (optional)"
            id="signal-notes-input"
            items=""
            maxlength="500"
            modelvalue=""
            positiontop="false"
            rules="true"
          />
        </v-col-stub>
      </v-row-stub>
    </v-card-text-stub>
  </v-form-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    tag="div"
  >
    <delete-button-stub
      disabled="true"
      id="delete-button"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`EditSignalDialog > view elements > snapshots > renders correctly if station has timeModeActive 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    id="signal-dialog-toolbar"
    title="Change to production 12:15-12:16"
    titleicon=""
  />
  <v-form-stub
    disabled="false"
    fastfail="false"
    modelvalue="true"
    validateon="input"
  >
    <v-card-text-stub
      class="pa-4 pb-0"
      tag="div"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-stub
            class="mb-2"
            density="default"
            disabled="true"
            filled="true"
            grow="false"
            hint="Product"
            id="signal-product-input"
            modelvalue="test product 1 (sku 1)"
            truncateinput="false"
            type="text"
            usechip="false"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="6"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-input-stub
            class="mb-2"
            disabled=""
            filled="true"
            grow="false"
            hint="Time"
            id="signal-time-input"
            modelvalue=""
            truncateinput="false"
            type="text"
            usechip="false"
            value="0min 20s"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1"
          cols="false"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-combobox-stub
            appendicon=""
            class="mb-2"
            density="default"
            hint="Extra note"
            id="signal-notes-input"
            items=""
            maxlength="500"
            modelvalue=""
            positiontop="false"
            rules="Extra note"
          />
        </v-col-stub>
      </v-row-stub>
    </v-card-text-stub>
  </v-form-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    tag="div"
  >
    <delete-button-stub
      disabled="true"
      id="delete-button"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;
